--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<!-- Notice the ng-app Angular directive. This tells Angular where the application starts and also
-which module to associate the app with. In app.js we create the "dinnerPlanner" module. -->
+<!-- This is the index-file of the DinnerPlanner app -->
 <html lang="en" ng-app="dinnerPlanner">
   <head>
     <meta charset="utf-8">
@@ -10,10 +9,16 @@ which module to associate the app with. In app.js we create the "dinnerPlanner" 
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <!-- Common CSS -->
+    <link rel="stylesheet" href="stylesheets/common.css">
     <!-- jQuery -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <!-- Bootstrap JavaScript, needed if you want for instance tabs, models, popovers etc. -->
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <!-- spin -->
+    <!-- <script src="js/spin.js"></script> -->
+    <!-- Underscore -->
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>
     <!-- Angular JavaScript including routing and resource modules  -->
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
@@ -28,6 +33,10 @@ which module to associate the app with. In app.js we create the "dinnerPlanner" 
 
   </head>
   <body>
+    <div class="row main-header container">
+      <div class="title col-xs-4"><a href="index.html">HOMELETTE</a></div>
+      <div class="subtitle col-xs-8">From the best chefs in the world directly into your kitchen</div>
+    </div>
     <!-- Here in index.html you should put only the layout that is shared among all the screens (e.g. header
     ,footer, etc.). The rest of the view specific layout will go into the html partials (check partials folder) -->
 
