--- a/app/index.html
+++ b/app/index.html
@@ -1,48 +1,44 @@
 <!DOCTYPE html>
 <!-- This is the index-file of the DinnerPlanner app -->
 <html lang="en" ng-app="dinnerPlanner">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Dinner planner</title>
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Dinner planner</title>
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
-    <!-- Common CSS -->
-    <link rel="stylesheet" href="stylesheets/common.css">
-    <!-- jQuery -->
-    <script src="bower_components/jquery/dist/jquery.js"></script>
-    <!-- Bootstrap JavaScript, needed if you want for instance tabs, models, popovers etc. -->
-    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <!-- spin -->
-    <!-- <script src="js/spin.js"></script> -->
-    <!-- Underscore -->
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>
-    <!-- Angular JavaScript including routing and resource modules  -->
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/angular-route/angular-route.js"></script>
-    <script src="bower_components/angular-resource/angular-resource.js"></script>
-    
-    <!-- The application JavaScript code -->
-    <script src="js/app.js"></script>
-    <script src="js/dinnerService.js"></script>
-    <script src="js/searchCtrl.js"></script>
-    <script src="js/dinnerCtrl.js"></script>
-    <script src="js/dishCtrl.js"></script>
+		<!-- Bootstrap CSS -->
+		<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+		<!-- Common CSS -->
+		<link rel="stylesheet" href="stylesheets/common.css">
+		<!-- jQuery -->
+		<script src="bower_components/jquery/dist/jquery.js"></script>
+		<!-- Bootstrap JavaScript, needed if you want for instance tabs, models, popovers etc. -->
+		<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+		<!-- spin -->
+		<!-- <script src="js/spin.js"></script> -->
+		<!-- Underscore -->
+		<script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>
+		<!-- Angular JavaScript including routing and resource modules  -->
+		<script src="bower_components/angular/angular.js"></script>
+		<script src="bower_components/angular-route/angular-route.js"></script>
+		<script src="bower_components/angular-resource/angular-resource.js"></script>
+		
+		<!-- The application JavaScript code -->
+		<script src="js/app.js"></script>
+		<script src="js/dinnerService.js"></script>
+		<script src="js/searchCtrl.js"></script>
+		<script src="js/dinnerCtrl.js"></script>
+		<script src="js/dishCtrl.js"></script>
 
-  </head>
-  <body>
-    <div class="row main-header container">
-      <div class="title col-xs-4"><a href="index.html">HOMELETTE</a></div>
-      <div class="subtitle col-xs-8">From the best chefs in the world directly into your kitchen</div>
-    </div>
-    <!-- Here in index.html you should put only the layout that is shared among all the screens (e.g. header
-    ,footer, etc.). The rest of the view specific layout will go into the html partials (check partials folder) -->
-
-    <!-- ng-view Angular directive is where the partials will be loaded. app.js configures the $routingProvider
-    where you specify which partial should be loaded when. -->
-    <div ng-view></div>
-
-  </body>
+	</head>
+	<body>
+		<div class="main-header box">
+			<div class="row">
+				<div class="title col-xs-4"><a href="index.html">HOMELETTE</a></div>
+				<div class="subtitle col-xs-8">From the best chefs in the world directly into your kitchen</div>
+			</div>
+		</div>
+		<div ng-view></div>
+	</body>
 </html>
