--- a/app/index.html
+++ b/app/index.html
@@ -33,12 +33,14 @@
 
 	</head>
 	<body>
-		<div class="main-header box">
-			<div class="row">
-				<div class="title col-xs-4"><a href="index.html">HOMELETTE</a></div>
-				<div class="subtitle col-xs-8">From the best chefs in the world directly into your kitchen</div>
+		<div class="container-fluid">
+			<div class="row main-header box">
+				<div class="row">
+					<div class="title col-sm-4"><a href="index.html">HOMELETTE</a></div>
+					<div class="subtitle col-sm-8">From the best chefs in the world directly into your kitchen</div>
+				</div>
 			</div>
+			<div ng-view></div>
 		</div>
-		<div ng-view></div>
 	</body>
 </html>
