--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
 		<div class="container-fluid">
 			<div class="row main-header box">
 				<div class="row">
-					<div class="title col-sm-4"><a href="index.html">HOMELETTE</a></div>
+					<div class="title col-sm-4"><a href="#/home">HOMELETTE</a></div>
 					<div class="subtitle col-sm-8">From the best chefs in the world directly into your kitchen</div>
 				</div>
 			</div>
