--- a/app/index.html
+++ b/app/index.html
@@ -19,11 +19,13 @@
 		<!-- <script src="js/spin.js"></script> -->
 		<!-- Underscore -->
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>
-		<!-- Angular JavaScript including routing and resource modules  -->
+		
+		<!-- Angular JavaScript including routing, resource modules and cookies -->
 		<script src="bower_components/angular/angular.js"></script>
 		<script src="bower_components/angular-route/angular-route.js"></script>
 		<script src="bower_components/angular-resource/angular-resource.js"></script>
-		
+		<script src="bower_components/angular-cookies/angular-cookies.js"></script>
+
 		<!-- The application JavaScript code -->
 		<script src="js/app.js"></script>
 		<script src="js/dinnerService.js"></script>
